--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json  = "1.0"
 anyhow = "1.0"
 uuid = { version = "1.3.3", features = ["v4"]}
+rand = "0.8"
